# ChangeLog for dev-util/duma
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/duma/ChangeLog,v 1.10 2009/08/01 20:00:23 nerdboy Exp $

*duma-2.5.15 (01 Aug 2009)

  01 Aug 2009; Steve Arnold <nerdboy@gentoo.org> +duma-2.5.15.ebuild,
  +files/duma-2.5.15-GNUmakefile.patch:
  Updated to latest version using ebuild and patch contributed by 
  ssuominen with one or two minor enhancements.  Closes bug #275011.

*duma-2.5.14-r1 (01 Apr 2009)

  01 Apr 2009; Steve Arnold <nerdboy@gentoo.org> -duma-2.5.14.ebuild,
  +duma-2.5.14-r1.ebuild:
  Updated latest ~arch to build with current toolchain (bug #262514).
  Based on what this package does, as well as the failures reported in
  the above bug, it doesn't seem appropriate to pass every random set
  of user-supplied CFLAGS.  Feel free to comment with justification
  for specific flags and/or pointers to relevant info.

*duma-2.5.14 (03 Jan 2009)

  03 Jan 2009; Patrick Lauer <patrick@gentoo.org> +duma-2.5.14.ebuild:
  Bump to 2.5.14

  22 Nov 2008; Markus Meier <maekke@gentoo.org> duma-2.5.13.ebuild:
  amd64 stable, bug #243332

  15 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org> duma-2.5.13.ebuild:
  ppc stable, bug #243332

  14 Nov 2008; Raúl Porcel <armin76@gentoo.org> duma-2.5.13.ebuild:
  x86 stable wrt #243332

*duma-2.5.13 (05 Jun 2008)

  05 Jun 2008; Steve Arnold <nerdboy@gentoo.org> +duma-2.5.13.ebuild,
  duma-2.5.8.ebuild, duma-2.4.27.ebuild:
  Added latest version; removed patch, and simplified install function.
  Closes bug #219011.  Also fixed minor QA issues in all three versions.

*duma-2.5.8 (10 Oct 2007)

  10 Oct 2007; Steve Arnold <nerdboy@gentoo.org>
  +files/duma-2.5.8-soname.patch, duma-2.4.27.ebuild, +duma-2.5.8.ebuild:
  Version bump and stable bump (special case, since there was only one
  unstable version to begin with).  Closes bug 195203.

*duma-2.4.27 (03 Apr 2007)

  03 Apr 2007; Steve Arnold <nerdboy@gentoo.org>