@@ -4,8 +4,8 @@ AUX duma-2.5.8-includes.patch 224 RMD160 363ae582995da8bd75b2be8ef2d81051f456d1b
 DIST duma_2_5_13.tar.gz 233157 RMD160 4e6ab25727e49582a9d9d59087e624a2b9e1e260 SHA1 873740941b8c8a00421bb04f2d0321f858408ee6 SHA256 338757d68f580b38d0680f21151c55e705abf5c933d959410be90fe5c5248777
 DIST duma_2_5_14.tar.gz 237777 RMD160 9e1c77ce3801a124044293215b0d7ee6692281a1 SHA1 c99bd748e58608e3614ac3a3b1511eded7b9465a SHA256 91d9cc49e7aae7da342b1422521ba08b82685b666630bc64a7a97eab47520258
 DIST duma_2_5_15.tar.gz 240479 RMD160 c2d6399fb2701892b2a9113e4cb47b75d2d87f52 SHA1 f1f90620c5eff4e76316594fa3e7e5a6833b8d0d SHA256 baaf794854e3093ad1bddadbfb8ad4b220a7117d70359ee216bd59e353734e17
-EBUILD duma-2.5.13.ebuild 2614 RMD160 aa3897108a7081710e20b545f9143d21f663502b SHA1 f4fdc30f438b14bda180fb5ed144c8b81acecbb3 SHA256 bed904293f3b4d5f9aa6fd280cd6d003cbfa2cf08ab74bc409f39fc4591a69e0
+EBUILD duma-2.5.13.ebuild 2666 RMD160 7f4d37f4ba7c6b70948526a3bf9d086267e00dcc SHA1 13d4cf8efef8580c0c8aa14646e997bf975ad493 SHA256 4b8a32d0f02595320c4256d65bf852507a6264b49e096b52686b885daf9a26fa
 EBUILD duma-2.5.14-r1.ebuild 2694 RMD160 c2640afdcf38376bc4a5a522e9e57a3e37abfbe9 SHA1 cdcfb075cc268dc8ade8b9f358ccdc266c83366a SHA256 298e52c81f3f2288e6256773511dbc319aec326a774199353c86b5555d079d68
 EBUILD duma-2.5.15.ebuild 2567 RMD160 af4bd398ddb53e754220984fb8133853c011c51e SHA1 146b475edde227248f468c954b91ef86776874d8 SHA256 bb0e0ecd0933da02b4f748d8d129affd163a27df7ef7090684c4fdb076244cd9
-MISC ChangeLog 2315 RMD160 ebaedf3f410871f3385a16f329cc1c584bf03eeb SHA1 e9478970ba2eef5687aafc37bdfd531aea9b4eb0 SHA256 ea00cb90c70fc42c2356e71887746c24bf2d21605939b6e559746a1bd1757c8c
+MISC ChangeLog 2459 RMD160 e29ec2d1786324b5a10ce20d877b899f30203e5d SHA1 bc4fe107f81993fa319cba624f3372068aaa7b31 SHA256 e3864ada4d086197bec5ee2bbd2aa4a936a313d91c357ec6042ed3a458e0ce81
 MISC metadata.xml 571 RMD160 7503a42ba65123b48155aa20812e1f76165843af SHA1 57e85da85b7fcd90018216e371fed033cac76ee7 SHA256 5a422de5cb204ec5f8cc4631fb5c54721f27e929e290e9fa494bcd15351cf107
